Version 5.8 - 15 February 2009, Thierry Vignaud

- fix crashing on uninstalling packages (#47751)
- icons (#44671):
  o update banner icons from mcc ones
  o use mcc icon for banners if availlable
- prevent crashing in URPM when using --env with relative paths
- edit-urpm-sources:
  o do not use the same shortcut for "Add a specific "media mirror"
    and "_Add a custom medium" menu entries (#46027)
  o honnor canceling when the user closed the "updates/full_sources"
    dialog (#47125)
  o honnor canceling when the user refused to access the network when
    adding a specific mirror from the menubar (#46027)
  o use same icon as in mcc instead of rpmdrake one (#44671)

Version 5.7 - 11 February 2009, Thierry Vignaud

- fix using --justdb option
- MandrivaUpdate:
  o warn when rebooting is needed after installing packages
- rpmdrake:
  o add C-F accelerator in order to focus on search entry (#46404)

Version 5.6 - 9 February 2009, Thierry Vignaud

- edit-urpm-sources:
  o add media even if one failed instead of rollbacking all of them
    (regression introduced in urpmi-6.19)
  o fix displayling big list of media to remove (#46773)
  o fix media selection dialog layout so that dialog behaves smoothly
    on resizing (#47271)
- MandrivaUpdate:
  o use new proper API to select media, thus fixing not updating media
    (side effect of urpmi API changes, #47209)
- rpmdrake:
  o update GUI package list

Version 5.5 - 9 December 2008, Thierry Vignaud

- rpmdrake:
  o searching:
    * fix a rare crash on searching (#46225)
    * only look at name, not at full name (n-e-v-r) when performing
      search in names (#45410)
    * scroll group list to search category
  o update GUI package list

Version 5.4 - 24 November 2008, Thierry Vignaud

- edit-urpm-sources:
  o do not drop 'ignore' flag when updating a medium (#44930)
  o fix displaying type of altered mirrorlist media (#44930)
- rpmdrake:
  o list plasma applets in GUI package list too (#45835)