@@ -1,3 +1,7 @@
+- rpmdrake:
+  o add 'compute_updates' option that enable super fast startup by
+    skipping computing updates on startup
+
 Version 5.8 - 15 February 2009, Thierry Vignaud
 
 - fix crashing on uninstalling packages (#47751)
